# ai-clients

./: pyproject.toml
src/ai_clients/: base.py
src/ai_clients/codestral/: client.py
src/ai_clients/deepseek/: client.py
workflows/: package-test.yml
